--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Sara Bahaadini"
   avatar           : "profile.jpg"
   bio              : "PhD Candidate at Northwestern University"
-  location         : "Evanstion,IL"
+  location         : "Evanstion, IL, USA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=S6SfMu8AAAAJ&hl=en"
   email            :
@@ -101,7 +101,7 @@ author:
   instagram        :
   lastfm           :
   linkedin         : "http://www.linkedin.com/in/sara-bahaadini-machine-learning"
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
