--- a/_config.yml
+++ b/_config.yml
@@ -95,12 +95,12 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/sara-bah"
+  github           : "sara-bah"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "http://www.linkedin.com/in/sara-bahaadini-machine-learning"
+  linkedin         : "sara-bahaadini-machine-learning"
   orcid            : 
   pinterest        :
   soundcloud       :
