--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,6 +5,6 @@ Name Name:
   uri         : "http://name.com"
   email       : "sara.bahaadini@u.northwestern.edu"
   bio         : "PhD Candidate at Northwestern University."
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "profile.jpg"
   twitter     : ""
   google_plus : ""
