--- a/_config.yml
+++ b/_config.yml
@@ -175,7 +175,7 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  Experience:
+  experience:
     output: true
     permalink: /:collection/:path/
 
@@ -208,7 +208,7 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
+  # _experience
   - scope:
       path: ""
       type: portfolio
