--- a/_config.yml
+++ b/_config.yml
@@ -219,7 +219,7 @@ defaults:
       path: ""
       type: publications
     values:
-      layout: double
+      layout: talk
       author_profile: true
       share: true
       comments: true
